Common/Deployment/prod/manifests/nginx/deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
  labels:
    app: nginx-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
      - name: nginx-web
        image: registry.digitalocean.com/ddd/ddd_backend_web:v1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: "/etc/nginx/conf.d/"
          readOnly: false
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
