Common/Deployment/prod/manifests/nginx/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-web
  name: nginx-web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-web
